--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,11 @@
 name: My workflow
 
-on: push
+on: 
+ push:
+    branches: [ "main" ]
 
 jobs:
-  my-job:
+   my-job:
     name: My job
     runs-on: ubuntu-latest
     steps:
